{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 195,
  "lineage": "8cf5fbe6-12ff-9092-4bcb-c7e3eebd5ac8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hhs-api-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ad2567c9e3d7893",
            "arn": "arn:aws:ec2:us-east-1:309059502301:instance/i-0b799eee58ffe1161",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b799eee58ffe1161",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hhs-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0526e8eaf5164b2c3",
            "private_dns": "ip-10-0-1-170.ec2.internal",
            "private_ip": "10.0.1.170",
            "public_ip": "3.83.88.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07584daccbc9f27bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008d9e78fce59f095",
            "tags": {
              "Name": "hhs-api-ec2"
            },
            "tags_all": {
              "Name": "hhs-api-ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07e0b84bab7fd95c1"
            ]
          },
          "dependencies": [
            "aws_security_group.hhs-api-sec-group",
            "aws_subnet.hhs-public-subnet",
            "aws_vpc.hhs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hhs-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309059502301:internet-gateway/igw-0d2734734ac24a02d",
            "id": "igw-0d2734734ac24a02d",
            "owner_id": "309059502301",
            "tags": {
              "Name": "hhs-gw"
            },
            "tags_all": {
              "Name": "hhs-gw"
            },
            "vpc_id": "vpc-05723129ed74d69b0"
          },
          "dependencies": [
            "aws_vpc.hhs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hhs-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309059502301:route-table/rtb-03c532c2953650ad2",
            "id": "rtb-03c532c2953650ad2",
            "owner_id": "309059502301",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d2734734ac24a02d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hhs-public-route-table"
            },
            "tags_all": {
              "Name": "hhs-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05723129ed74d69b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hhs-gw",
            "aws_vpc.hhs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048d6a889823d9629",
            "route_table_id": "rtb-03c532c2953650ad2",
            "subnet_id": "subnet-008d9e78fce59f095"
          },
          "dependencies": [
            "aws_internet_gateway.hhs-gw",
            "aws_route_table.hhs-public-route-table",
            "aws_subnet.hhs-public-subnet",
            "aws_vpc.hhs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hhs-api-sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309059502301:security-group/sg-07e0b84bab7fd95c1",
            "description": "allowing http and ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e0b84bab7fd95c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hhs-api-sec-group",
            "name_prefix": "",
            "owner_id": "309059502301",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hhs-api-sec-group"
            },
            "tags_all": {
              "Name": "hhs-api-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05723129ed74d69b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hhs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hhs-rds-sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309059502301:security-group/sg-089505b7c14bf6fa7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089505b7c14bf6fa7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "hhs-rds-sec-group",
            "name_prefix": "",
            "owner_id": "309059502301",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hhs-rds-sec-group"
            },
            "tags_all": {
              "Name": "hhs-rds-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05723129ed74d69b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hhs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hhs-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309059502301:subnet/subnet-03a1200efcc0703aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03a1200efcc0703aa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309059502301",
            "tags": {
              "Name": "hss-private-subnet"
            },
            "tags_all": {
              "Name": "hss-private-subnet"
            },
            "vpc_id": "vpc-05723129ed74d69b0"
          },
          "dependencies": [
            "aws_vpc.hhs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hhs-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309059502301:subnet/subnet-008d9e78fce59f095",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-008d9e78fce59f095",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "309059502301",
            "tags": {
              "Name": "hhs-public-subnet"
            },
            "tags_all": {
              "Name": "hhs-public-subnet"
            },
            "vpc_id": "vpc-05723129ed74d69b0"
          },
          "dependencies": [
            "aws_vpc.hhs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hhs-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309059502301:vpc/vpc-05723129ed74d69b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b86eda4622b8382",
            "default_route_table_id": "rtb-015853aa307915ffb",
            "default_security_group_id": "sg-051cca22bb0c60190",
            "dhcp_options_id": "dopt-02001132e4d0f59b9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05723129ed74d69b0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-015853aa307915ffb",
            "owner_id": "309059502301",
            "tags": {
              "Name": "hhs-vpc"
            },
            "tags_all": {
              "Name": "hhs-vpc"
            }
          }
        }
      ]
    }
  ]
}